# slack_client_lib

./: .gitignore  Cargo.toml  Makefile  test_environment.env.asc
src/: client.rs  error.rs  message.rs  tests_helpers.rs  view.rs
src/search_by_name/: full_name_search.rs  iter_users_search.rs
src/users_cache/: users_in_memory_cache.rs  users_sqlite_cache.rs
tests/: tests.rs
