[package]
name = "slack_client_lib"
version = "1.2.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

[features]
default = ["rustls", "sql"]

rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
native-tls = ["reqwest/native-tls"]
sql = ["sqlx", "tokio/rt-multi-thread"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"]}
tokio = {version="1", default-features = false, features = ["fs", "io-util"]}
sqlx = {optional = true, version="0.5", default-features = false, features=["runtime-tokio-rustls", "sqlite", "json", "macros"]}
futures = "0.3"
serde = {version="1", features=["derive"]}
serde_json = "1"
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tokio = {version="1.16", default-features = false, features = ["macros", "time", "fs", "io-util", "test-util"]}
qrcode = "0.12"
image = {version = "0.23", default-features = false, features = ["png"]}
dirs = "4"
env_logger = "0.9"